<resources>
    <string name="app_name">Week2_Challenge</string>
    <string name="this_is_an_orange_textview">This is an orange TextView</string>
    <string name="this_is_a_green_textview">This is a green TextView</string>
    <string name="this_is_a_blue_textview">This is a blue TextView</string>
    <string name="this_is_a_button">This is a button</string>
    <string name="palette">Palette</string>
    <string name="this_is_a_green_button">This is a green button</string>
    <string name="this_is_an_edittext">This is an EditText</string>
    <string name="this_is_a_new_edit_text">This is a new Edit Text</string>
    <string name="notify_me">Notify me :)</string>
    <string name="auto_backup">Auto backup</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
</resources>
