<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:background="@color/melon"
            android:gravity="center"
            android:text="@string/this_is_an_orange_textview"
            android:textColor="@color/white"
            android:textSize="@dimen/largeText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@color/teaGreen"
            android:gravity="center"
            android:text="@string/this_is_a_green_textview"
            android:textColor="@color/black"
            android:textSize="@dimen/largeText" />

        <TextView
            android:layout_width="0dp"
            android:layout_height="140dp"
            android:layout_weight="1"
            android:background="@color/tiffany"
            android:gravity="center"
            android:text="@string/this_is_a_blue_textview"
            android:textColor="@color/white"
            android:textSize="@dimen/largeText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="4dp">

        <Button
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="4dp"
            android:layout_weight="1"
            android:background="@color/tiffany"
            android:padding="8dp"
            android:text="@string/this_is_a_button"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumText" />

        <ImageView
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="@dimen/xsMargin"
            android:layout_weight="1"
            android:contentDescription="@string/palette"
            android:scaleType="centerInside"
            android:src="@drawable/paint" />

        <Button
            android:layout_width="0dp"
            android:layout_height="130dp"
            android:layout_margin="@dimen/xsMargin"
            android:layout_weight="1"
            android:background="@color/asparagus"
            android:text="@string/this_is_a_green_button"
            android:textColor="@color/black"
            android:textSize="@dimen/mediumText" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/gold"
        android:orientation="vertical"
        android:paddingTop="@dimen/mediumPadding"
        android:paddingBottom="@dimen/mediumPadding">

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:autofillHints="no"
            android:inputType="text"
            android:text="@string/this_is_an_edittext"
            android:textColor="@color/incaGold" />

        <EditText
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:importantForAutofill="no"
            android:inputType="text"
            android:text="@string/this_is_a_new_edit_text"
            android:textColor="@color/incaGold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/tiffany"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/smallPadding"
            android:paddingBottom="@dimen/xsMargin">

            <CheckBox
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/notify_me"
                android:textSize="@dimen/mediumText" />

            <Switch
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:checked="false"
                android:text="@string/auto_backup"
                android:textSize="@dimen/smallText" />
        </LinearLayout>

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/desaturatedBlue" />

        <RatingBar
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:isIndicator="false"
            android:numStars="5"
            android:progressTint="@color/pink"
            android:rating="4"
            android:scaleX="0.5"
            android:scaleY="0.5"
            android:stepSize="1"
            android:transformPivotX="4dp"
            android:transformPivotY="28dp" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="@color/desaturatedBlue" />

        <RadioGroup
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingTop="@dimen/mediumPadding">

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/yes"
                android:textSize="@dimen/mediumText" />

            <RadioButton
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/no"
                android:textSize="@dimen/mediumText" />
        </RadioGroup>

    </LinearLayout>

</LinearLayout>